--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "5.1.3",
     "bootswatch": "^5.1.3",
     "history": "5",
+    "luxon": "^2.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
